@@ -47,6 +47,9 @@ Dumping the traceback
    Dump the tracebacks of all threads into *file*. If *all_threads* is
    ``False``, dump only the current thread.
 
+   .. versionchanged:: 3.5
+      Added support for passing file descriptor to this function.
+
 
 Fault handler state
 -------------------
@@ -58,6 +61,12 @@ Fault handler state
    signals to dump the Python traceback. If *all_threads* is ``True``,
    produce tracebacks for every running thread. Otherwise, dump only the current
    thread.
+
+   The *file* must be kept open until the fault handler is disabled: see
+   :ref:`issue with file descriptors <faulthandler-fd>`.
+
+   .. versionchanged:: 3.5
+      Added support for passing file descriptor to this function.
 
 .. function:: disable()
 
@@ -82,8 +91,15 @@ Dumping the tracebacks after a timeout
    call replaces previous parameters and resets the timeout. The timer has a
    sub-second resolution.
 
+   The *file* must be kept open until the traceback is dumped or
+   :func:`cancel_dump_traceback_later` is called: see :ref:`issue with file
+   descriptors <faulthandler-fd>`.
+
    This function is implemented using a watchdog thread and therefore is not
    available if Python is compiled with threads disabled.
+
+   .. versionchanged:: 3.5
+      Added support for passing file descriptor to this function.
 
 .. function:: cancel_dump_traceback_later()
 
@@ -99,7 +115,13 @@ Dumping the traceback on a user signal
    the traceback of all threads, or of the current thread if *all_threads* is
    ``False``, into *file*. Call the previous handler if chain is ``True``.
 
+   The *file* must be kept open until the signal is unregistered by
+   :func:`unregister`: see :ref:`issue with file descriptors <faulthandler-fd>`.
+
    Not available on Windows.
+
+   .. versionchanged:: 3.5
+      Added support for passing file descriptor to this function.
 
 .. function:: unregister(signum)
 
@@ -109,6 +131,8 @@ Dumping the traceback on a user signal
 
    Not available on Windows.
 
+
+.. _faulthandler-fd:
 
 Issue with file descriptors
 ---------------------------
